# flask-learning-initial

./: .gitignore  Procfile  README.md  changelog.md  pyproject.toml  setup.py
flaskr/: __init__.py  blog.py
flaskr/templates/: base.html
