[tool.poetry]
name = "flask-tutorial"
version = "1.0.6"
description = ""
authors = ["Ryan Lee <ryanlee4761@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run = "flaskr:create_app"
